# Atom

./: .gitignore  README.md  TEXHELP.md  pyproject.toml
AtomGym/: CLAUDE.md  README.md  __init__.py  action_observation.py  goalie_box_geometry.py  training_perf_investigation.md
AtomGym/configs/: control_pretrain.yaml  default_solo.yaml  default_team.yaml
AtomGym/environments/: __init__.py  initial_state.py  solo_env.py  team_env.py
AtomGym/rewards/: __init__.py  _base_reward.py  ball_alignment.py  ball_progress.py  distance_to_ball.py  goal_scored.py  goalie_box_penalty.py  obstacle_contact.py  stall_penalty.py  static_field_penalty.py
AtomGym/tests/: test_action_observation.py  test_ball_alignment.py  test_goalie_box_geometry.py  test_goalie_box_penalty.py  test_initial_state_ranges.py  test_obstacle_contact.py  test_opponent_runner.py  test_pool_sync_callback.py  test_ref_eval_callback.py  test_reference_opponent.py  test_rewards_base.py  test_rewards_terms.py  test_snapshot_pool.py  test_solo_env_control_loop.py  test_solo_env_init_state_dr.py  test_solo_env_reward_integration.py  test_stall_penalty.py  test_static_field_penalty.py  test_team_env.py  test_training_config.py  test_transfer_solo_to_team.py  test_win_rate_tracker.py
AtomGym/tools/: render_ball_alignment.py  render_goalie_box_doc.py  render_goalie_box_penalty.py  render_static_field.py
AtomGym/training/: __init__.py  _async_vec_env.py  _shadow_policy.py  benchmark_throughput.py  config.py  gif_eval_callback.py  opponent_runner.py  pool_sync_callback.py  profile.py  ref_eval_callback.py  reference_opponent.py  snapshot_pool.py  team_worker_wrapper.py  train.py  train_async.py  train_compile.py  train_team.py  train_team_async.py  transfer_extend_obs.py  transfer_solo_to_team.py  win_rate_tracker.py
AtomPCB/: v0.kicad_jobset
AtomPCB/Compute_chunk/Compute_chunk/: #auto_saved_files#  Compute_chunk.kicad_pcb  Compute_chunk.kicad_prl  Compute_chunk.kicad_pro  Compute_chunk.kicad_sch  bottom_chunk_template.kicad_pro
AtomPCB/Wheel_chunk/: 3v3_buck_template.kicad_sch  Wheel_chunk-eagle-import.kicad_sym  Wheel_chunk.kicad_pcb  Wheel_chunk.kicad_prl  Wheel_chunk.kicad_pro  Wheel_chunk.kicad_sch  Wheel_chunk_bu01.kicad_sch  fp-info-cache  sym-lib-table
AtomPCB/chunk_pannel/: chunk_pannel.kicad_pcb  chunk_pannel.kicad_prl  chunk_pannel.kicad_pro  chunk_pannel.kicad_sch  fp-info-cache
AtomPCB/chunk_programmer/: chunk_programmer.kicad_pcb  chunk_programmer.kicad_prl  chunk_programmer.kicad_pro  chunk_programmer.kicad_sch  fp-info-cache
AtomPCB/chunks/Battery_chunk/: Battery_chunk.kicad_prl  Battery_chunk.kicad_pro  Battery_chunk.kicad_sch  Battery_chunk_lower.kicad_sch-bak  fp-info-cache
AtomPCB/chunks/Compute_chunk/: Compute_chunk.kicad_pcb  Compute_chunk.kicad_prl  Compute_chunk.kicad_pro  Compute_chunk.kicad_sch  fp-info-cache
AtomPCB/chunks/Wheel_chunk/: Wheel_chunk.kicad_pcb  Wheel_chunk.kicad_prl  Wheel_chunk.kicad_pro  Wheel_chunk.kicad_sch  _autosave-Wheel_chunk.kicad_prl  untitled.kicad_sch
AtomPCB/footprints/CP2102N_A02_GQFN20R/: SILABS_CP2102N-A02-GQFN20R.kicad_mod
AtomPCB/footprints/DF40C_40DP_0_4V_51_/: DF40C-40DP-0.4V_51_.kicad_sym  HRS_DF40C-40DP-0.4V_51_.kicad_mod
AtomPCB/footprints/DF40HC_4_0__40DS_0_4V_70_/: DF40HC(4.0)-40DS-0.4V(70).STEP
AtomPCB/footprints/DRV8834RGER/: DRIVER_DRV8834RGER.kicad_mod  DRV8834RGER.kicad_sym  (+1 more)
AtomPCB/templates/: 2_layer_chunk_template.kicad_pcb  2_layer_chunk_template.kicad_prl  2_layer_chunk_template.kicad_pro  bottom_chunk_template.kicad_pcb  bottom_chunk_template.kicad_prl  bottom_chunk_template.kicad_pro  bottom_chunk_template.kicad_sch  chunk_template.kicad_pcb  chunk_template.kicad_prl  chunk_template.kicad_pro  templates.kicad_prl  templates.kicad_pro  templates.kicad_sch  top_chunk_template.kicad_pcb  top_chunk_template.kicad_prl  top_chunk_template.kicad_pro  top_chunk_template.kicad_sch  ~2_layer_chunk_template.kicad_pcb.lck
AtomSim/: CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  claude_readme.md
AtomSim/dynamics/diff_drive/analysis/: diff_drive.tex  dynamics_tour.ipynb  preamble.tex
AtomSim/dynamics/diff_drive/analysis/sections/: 01_setup.tex
AtomSim/dynamics/diff_drive/bindings/: CMakeLists.txt
AtomSim/dynamics/diff_drive/core/: CMakeLists.txt  linearize.hpp
AtomSim/sim/: CMakeLists.txt  ball.cpp  ball.hpp  robot.cpp  robot.hpp  types.hpp  world.cpp  world.hpp
AtomSim/sim/bindings/: CMakeLists.txt  sim_py.cpp
AtomSim/sim/configs/manipulators/: default_pusher.json  sidewall_pusher.json
AtomSim/sim/configs/robots/: diff_drive_default.json  diff_drive_sidewall.json
AtomSim/sim/configs/styles/: default.yaml
AtomSim/sim/objects/ball/bindings/: CMakeLists.txt  ball_py.cpp
AtomSim/sim/objects/ball/core/: CMakeLists.txt  contact.hpp  dynamics.hpp  integrators.hpp  types.hpp
AtomSim/sim/objects/ball/core/tests/: CMakeLists.txt  test_stub.cpp
AtomSim/sim/python/: demo.py  random_gif.py  render_episode.py  replay_episode.py  teleop.py  teleop_multi.py
AtomSim/sim/python/viz/: __init__.py  episode.py  recorder.py  scene.py  style.py
AtomSim/sim/python/viz/input/: __init__.py  base.py  composite.py  gamepad.py  keyboard.py
AtomSim/sim/python/viz/renderers/: __init__.py  _pygame_draw.py  base.py  pygame_headless.py  pygame_live.py
AtomSim/sim/tests/: CMakeLists.txt  test_ball.cpp  test_robot.cpp  test_world.cpp
AtomSim/sim/tools/: polygon_designer.ipynb
AtomSim/tests/: CMakeLists.txt
AtomSim/vehicle_dynamics/diff_drive/analysis/: diff_drive.tex  dynamics_tour.ipynb  preamble.tex
AtomSim/vehicle_dynamics/diff_drive/analysis/sections/: 02_constraints.tex  03_kinematics.tex  04_dynamics.tex  05_linearization.tex  06_verification.tex
AtomSim/vehicle_dynamics/diff_drive/bindings/: diff_drive_py.cpp
AtomSim/vehicle_dynamics/diff_drive/core/: dynamics.hpp  integrators.hpp  types.hpp
AtomSim/vehicle_dynamics/diff_drive/core/tests/: CMakeLists.txt  test_stub.cpp
AtomTag/: .gitignore  CLAUDE.md  gradle.properties  local.properties  settings.gradle.kts
AtomTag/app/: build.gradle.kts
(+129 files in other folders)
