[project]
name = "atom"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "numpy>=2.4.4",
    "pettingzoo>=1.26.1",
    "pybind11>=3.0.4",
    "stable-baselines3>=2.8.0",
]

[dependency-groups]
analysis = [
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
]
viz = [
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.5.1",
    "pygame>=2.6.0",
    "pyyaml>=6.0.2",
]
dev = [
    "nbstripout>=0.9.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
training = [
    "tensorboard>=2.16.0",
]
